[package]
name = "input-actions"
description = "An input system for binding PC & Gamepad inputs to application actions"
license-file = "LICENSE"
version = "0.1.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
repository = "https://github.com/temportalflux/input-actions/"
keywords = ["input", "game-dev"]
readme = "README.md"
edition = "2018"

[features]
default = ["log", "winit"]

[dependencies]
gilrs = { git = "https://github.com/temportalflux/gilrs-fork" }
winit = { version = "0.24", optional = true }
log = { version = "0.4", features = ["std"], optional = true }
