[package]
name = "input-actions"
description = "An input system for binding PC & Gamepad inputs to application actions"
license-file = "LICENSE"
version = "0.1.1-alpha.0"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]
repository = "https://github.com/temportalflux/input-actions/"
keywords = ["input", "game-dev", "gamepad", "joystick"]
categories = ["game-engines"]
readme = "README.md"
edition = "2018"

[features]
default = ["log", "winit"]

[dependencies]
gilrs = "0.8"
winit = { version = "0.27", optional = true }
log = { version = "0.4", features = ["std"], optional = true }
enumset = { version = "1.0" }
crossbeam-channel = "0.5"
